--- a/style.css
+++ b/style.css
@@ -62,6 +62,12 @@ body{
     transform: scale(1.05);
     color: red;
 }
+@media screen and (max-width: 800px) {
+    .contato{
+        width: 400px;
+        height: 60px;
+    }
+  }
 
 
 .container {
@@ -79,7 +85,7 @@ body{
 }
 .box {
     margin-left: 5%;
-    width: 600px;
+    width: 100%px;
     height: 550px;
     text-align: center;
 }
@@ -96,6 +102,21 @@ body{
     text-align: justify;
 }   
 
+@media screen and (max-width: 936px) {
+    .img-laft {
+        display: none;
+    }
+    .container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+  }
+  @media screen and (max-width: 500px) {
+    .title {
+        font-size: 23px;
+    }
+  }
 
 
 .background {
@@ -245,6 +266,19 @@ body{
 .img:hover {
     cursor: pointer;
 }
+@media screen and (max-width: 580px) {
+    .links a{
+        margin-right: 6px;
+        font-size: 95%;
+    }
+    .img {
+        padding-left: 2px;
+    }
+    .logo-container {
+        margin-right: 2px;
+        margin-left: 8px;
+  }
+}
 /* FIM navbar */
 
 .background-banner {
@@ -276,6 +310,19 @@ body{
     font-size: 60px;
     font-weight: bold;
 }
+@media screen and (max-width: 936px) {
+    .background-banner {
+        width: 100%;
+        height: 500px;
+        position: relative;
+    }
+    .background-banner img {
+        filter: blur(2px);
+        width: 100%;
+        height: 100%;
+    }
+  }
+
 
 
 .background-horarios {
@@ -333,6 +380,10 @@ table {
     
 }
 
+@media screen and (max-width: 936px) {
+
+  }
+
 /* IMC styles */
 .background-imc {
     width: 100%;
@@ -340,8 +391,30 @@ table {
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
+    
     background-color: #ccc;
+}
+.background-imcform {
+    width: 30%;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    
+}
+.background-imctext {
+    width: 30%;
+    height: 400px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    
+}
+.background-imctext p {
+    margin: 10%;
+    font-size: 20px;
 }
 #title-box {
     margin-top: 60px;
@@ -383,3 +456,24 @@ label {
     margin-bottom: 30px;
     font-weight: bold;
 }
+
+@media screen and (max-width: 1200px) {
+    .background-horarios {
+        flex-direction: column;
+    }
+    .title-div {
+        margin-left: 0px;
+    }
+    .horarios-de-funcionamento img {
+        display: none;
+    }
+    table {
+        margin-left: 0px;
+    }
+}
+@media screen and (max-width: 950px) {
+    .background {
+        
+    }
+}
+    
